--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "react-router-dom": "^6.16.0",
+    "react-bootstrap": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
